Fix bug on colorgame controls on mobile

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -6,6 +6,7 @@
   font-size: 1rem;
   border-radius: 5px;
   cursor: pointer;
+  margin: 0.5rem;
 }
 
 .light .button {
