--- a/src/containers/ColorGame/ColorGame.scss
+++ b/src/containers/ColorGame/ColorGame.scss
@@ -31,6 +31,12 @@
     justify-content: space-between;
     width: 80%;
     margin: 2rem 0;
+    flex-direction: column;
+    align-items: center;
+
+    @media (min-width: $mobile) {
+      flex-direction: row;
+    }
   }
 
   &__play-area {
